--- a/source/_posts/何为语法树.md
+++ b/source/_posts/何为语法树.md
@@ -63,18 +63,18 @@ LISP语言使用的「前缀表达式」：
 
 ```
 >>> import ast
->>> ast.dump(ast.parse("1 + 2 * 3"))
+>>> ast.dump(ast.parse("(1 + 2) * 3"))
 'Module(
 	body=[
 		Expr(
 			value=BinOp(
-				left=Num(n=1), 
-				op=Add(), 
-				right=BinOp(
-					left=Num(n=2),
-					op=Mult(), 
-					right=Num(n=3)
-				)
+				left=BinOp(
+					left=Num(n=1), 
+					op=Add(), 
+					right=Num(n=2)
+				), 
+				op=Mult(), 
+				right=Num(n=3)
 			)
 		)
 	]
