--- a/source/_posts/读《重来》.md
+++ b/source/_posts/读《重来》.md
@@ -23,7 +23,7 @@ tags:
 > 
 在广义上，成功时并不需要知道失败所遇到的事情
 若放在小事上，例如编程，有一些不折腾过，并不知道以后出错时如何解决
-但也可以延伸另外一个观点：寻找前往成功的直径，要开不必要的弯路。
+但也可以延伸另外一个观点：寻找前往成功的直径，绕开不必要的弯路。
 
 ### 计划既瞎猜 <small>Planning is guessing</small>
 > 
@@ -33,7 +33,7 @@ tags:
 ### 何必壮大 <small>Why grow?</small>
 > 
 在这一篇中，我想起了海贼王中「草帽路飞」海贼团。
-团队中每个人都能独当一年，且有一个统一的向心点。
+团队中每个人都能独当一面，且有一个统一的向心点。
 
 ### 工作狂 <small>Workaholism</small>
 > 
@@ -63,7 +63,7 @@ tags:
 这篇文章是站在创始人视角看待问题。
 从另外一个角度来说，要看待投资方是谁。
 如果是一些基金会，它们需要的是急切的盈利，想到的是如何套现。
-而如果是看中你所做的事情，想一起合作的，或者合并你的公司的投资就不一样了。他会把你所做的事情当做自己的事情来做。
+而如果是看中你所做的事情，想一起合作的，或者合并你的公司的投资方就不一样了。他会把你所做的事情当做自己的事情来做。
 
 ## 进阶篇
 
@@ -99,7 +99,7 @@ tags:
 ### 关注不变因素 <small>Focus on what won't change</small>
 > 
 英语、经济学、写作、音乐，
-着一些都是性价比颇高的素质，都十分有助于一个人的内在修养。
+这一些都是性价比颇高的素质，都十分有助于一个人的内在修养。
 
 ### 音乐就在你的指尖流淌 <small>Tone is in your fingers</small>
 > 
@@ -124,8 +124,8 @@ tags:
 ### 打岔是效率的敌人 <small>Interruption is the enemy of productivity</small>
 > 
 这一点让我深有体会，并且一直在挣扎的事情。
-尝试过番茄工作法，并且尝试让同事理解的这样的做法。
-并不接受直接过来打扰的方式。
+尝试过番茄工作法，并且尝试让同事理解我这样的做法。
+并不接受直接过来打扰的沟通方式。
 
 ### 刚刚好就是真的好 <small>Good enough is fine</small>
 > 
@@ -171,7 +171,7 @@ Copy-Paste的过程中，尽量知其所以然。
 
 ### 给竞争力做减法 <small>Underdo your competition</small>
 > 
-一款简约的产品，只需要集中解决用户的一个主要的痛点，而且加上以低成本随手可得的话，更加容易成为流行品
+一款简约的产品，只需要集中解决用户的一个主要的痛点，而且如果以低成本随手可得的话，更加容易成为流行品。
 
 ## 进化篇
 
@@ -188,12 +188,12 @@ Copy-Paste的过程中，尽量知其所以然。
 > 
 之所以说籍籍无名值得庆幸。
 是因为在这个阶段犯的错误，并没有放大效应，试错成本低。
-甘于低微，我还有另外一种理解。
+对于「甘于低微」，我还有另外一种理解。
 每个人都有他的优点，有胜于你的地方。甘于低微，可以让你保持低调，以及一颗愿意接纳新想法的心。
 
 ### 培养自己的拥趸 <small>Build an audience</small>
 > 
-通过提供有价值的内容，而培养自己的粉丝。
+通过提供有价值的内容，来培养自己的粉丝。
 
 ### 普及知识，赢得竞争 <small>Out-teach your competition</small>
 > 
@@ -237,16 +237,17 @@ Copy-Paste的过程中，尽量知其所以然。
 ### 鸡尾酒会上的陌生人 <small>Strangers at a cocktail party</small>
 > 
 招人，要给予足够的时间来交谈，得到充分的相互了解。
+应聘，同样对你所应聘的公司给予足够的关注和充分的沟通。
 
 ### 可笑的求职简历 <small>Resumes are ridiculous</small>
 > 
 要充分的了解你所应聘的公司，这是未来很长一段时间共同奋斗的团队。
-着考验了你的收集信息能力，和社交能力。
+这考验了你的信息收集能力，和社交能力。
 
 ### 多年的无关经验 <small>Years of irrelevance</small>
 > 
 熟悉、掌握一门技术活，只需要半年到一年的时间。
-而这之后，真正要看的是个人的努力程度、性格差异、智力水平以及工作态度。
+而在这之后，真正要看的是个人的努力程度、性格差异、智力水平以及工作态度。
 当然，还有基础知识的积累。
 例如你说有两年的NodeJS工作经验，但是基础的JavaScript都吃不通的话，让别人怎么相信你过去的努力程度。
 
@@ -254,7 +255,7 @@ Copy-Paste的过程中，尽量知其所以然。
 
 ### 主动掌控负面新闻 <small>Own your bad news</small>
 > 
-自己的糗事有自己来说比别人来说，结果会好得多。
+自己的糗事由自己来说比别人来说，结果会好得多。
 本篇说的，我总结三个字：责任心。
 愿意承担起责任的人，总是受人尊重。
 
@@ -262,7 +263,7 @@ Copy-Paste的过程中，尽量知其所以然。
 
 ### 文化不是由谁创造的 <small>You don't create a culture</small>
 > 
-但是对于小团队来说，企业文化往往取决与创始人的个人魅力。
+但是对于小团队来说，企业文化往往取决于创始人的个人魅力。
 
 ### 决策都是临时性的 <small>Decisions are temporary</small>
 > 
